deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wastage
  namespace: expanse-app
  labels:
    app: wastage
spec:
  selector:
    app: wastage
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
